tests/NormalTests/paczka2/big_fuzzy/54379594.err
Error in line 1: ixIob S581 26,0
Error in line 5: eRsNo5zssa A874 61,5
Error in line 6: eRsNo5zssa A141 15,0
Error in line 19: eRs³o5zssa S581 61,5
Error in line 17: eRsNo5zssa S581 15,8
Error in line 27: WuB S581 4,0
Error in line 51: X4TwnWUdc S581 43,1
Error in line 53: X4TwnWUdc A138 20,2
Error in line 57: eRsNo5zssa A874 85,1
Error in line 67: qzHYhswAA8 A874 92,0
Error in line 72: ixIob A874 93,4
Error in line 75: ixIob A138 54,0
Error in line 77: WuB S581 220,1
Error in line 68: dy4m7nU S581 92,7
Error in line 97: eRsNo5zssa A141 -1,9
Error in line 98: X4TwnWUdc A138 50,3
Error in line 110: qzHYhswAA8 A138 62,7
Error in line 124: WuB A138 38,42
Error in line 118: dy4m7nU S581 97,3
Error in line 128: WuB A138 -37,7
Error in line 91: eRsNo5zssa A141 3,1
Error in line 131: eRsNo5zssa A874 41,0
Error in line 127: dy4m7nU A874 0,1
Error in line 140: dy4m7nU A141 42,1
Error in line 139: X4TwnWUdc A874 335,0
Error in line 148: eRsNo5zssa A141 51,9
Error in line 158: ixIob A138 14,6
Error in line 161: dy4m7nU S581 44,78
Error in line 144: dy4m7nU A138 17,5
Error in line 159: eRsNo5zssa A138 40,2
Error in line 164: dy4m7nU S581 167,1
Error in line 189: WuB S581 198,01
Error in line 185: WuB S581 80,2
Error in line 190: WuB A141 86,5
Error in line 184: qzHYhswAA8 A138 58,1
Error in line 195: WuB A874 54,3
Error in line 203: WuB S581 4,7
Error in line 207: dy4m7nU A874 30,1
Error in line 211: WuB A141 44,4
Error in line 230: ixIob A141 94,6
